<resources>
    <string name="app_name">School App</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Mật Khẩu</string>
    <string name="title_login">Chưa \ncó tài \nKhoản?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Đăng Nhập</string>
    <string name="new_user">New user? Register Now</string>
    <string name="you_can_login_with">You can Login With</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="here_s_nyour_first_nstep_with_nus">Here’s\nyour first\nstep with \nus!</string>
    <string name="forgot_pass_title">You can get \npassword with \nEmail!</string>
    <string name="send">Send</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Trang chủ</string>
    <string name="messages">Tin Nhắn</string>
    <string name="news">Tin Tức</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="pham_ha">Pham Ha</string>
    <string name="le_dat">Le Dat</string>
    <string name="class_a_school_b">Class A, School B</string>
    <string name="activity">Hoạt Động</string>
    <string name="menu">Thực Đơn</string>
    <string name="schedule">Lịch Học</string>
    <string name="health">Sức Khỏe</string>
    <string name="xin_ph_p">Xin Phép</string>
    <string name="h_c_ph">Học Phí</string>
    <string name="l_ch_h_p">Lịch Họp</string>
    <string name="h_nh_nh">Hình Ảnh</string>
    <string name="teacher">Giáo Viên</string>
    <string name="parent">Phụ Huynh</string>
    <string name="account_info">Thông tin</string>
    <string name="logout">Đăng xuất</string>
    <string name="edit_profile">Edit profile</string>
    <string name="view_all">Xem tất cả</string>
    <string name="address">Địa Chỉ:</string>
    <string name="tham_gia">Tham Gia</string>
    <string name="c_n_n_ng">Cân Nặng:</string>
    <string name="ch_s_bmi">Chỉ số BMI:</string>
    <string name="th_i_gian">Thời gian:</string>
    <string name="chi_ti_t">Chi Tiết:</string>
    <string name="nh_p_l_do">Nhập lý do</string>
    <string name="th_ng">Tháng</string>
    <string name="t_n">Tên</string>
    <string name="t_nh_tr_ng">Tình trạng</string>
    <string name="dish">Dish</string>
    <string name="start">Bắt đầu</string>
    <string name="end">Kết thúc</string>
    <string name="monday">Thứ 2</string>
    <string name="tuesday">Thứ 3</string>
    <string name="wednesday">Thứ 4</string>
    <string name="thursday">Thứ 5</string>
    <string name="friday">Thứ 6</string>
    <string name="breakfast">Bữa Sáng</string>
    <string name="morning_supplement">Bữa trễ Sáng</string>
    <string name="lunch">Bữa Trưa</string>
    <string name="click_view">Xem Ngay!</string>
    <string name="tea">Bữa Xế chiều</string>
    <string name="body">Body</string>
    <string name="title">Tiêu đề</string>
    <string name="l_do">Lý Do</string>
    <string name="s_ng_y_ngh">Số ngày nghỉ</string>
    <string name="ng_y_k_t_th_c_ngh">Ngày kết thúc nghỉ:</string>
    <string name="t_n_ho_t_ng">Tên hoạt động</string>
</resources>
