<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bot_home"
        android:icon="@drawable/ic_bot_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bot_news"
        android:icon="@drawable/ic_bot_news"
        android:title="@string/news"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bot_notification"
        android:icon="@drawable/ic_bot_notifications"
        android:title="@string/notifications"
        app:showAsAction="always" />
    <item
        android:id="@+id/bot_account"
        android:icon="@drawable/ic_bot_user"
        android:title="@string/account"
        app:showAsAction="always" />

</menu>