<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/login_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/title_login" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_register_hero" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                app:boxBackgroundMode="filled"
                app:hintTextColor="@color/black">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_30sdp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_16sdp"
                app:boxBackgroundMode="filled"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_30sdp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/txt_forgot"
                style="@style/viewParent"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/newsMoreTextSize" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btn_login"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:gravity="center"
                android:text="@string/login"
                app:initialCornerAngle="@dimen/_28sdp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="@dimen/_6sdp"
                app:spinning_bar_width="@dimen/_4sdp" />

            <TextView
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/new_user"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:weightSum="12">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/you_can_login_with"
                    android:textAlignment="center"
                    android:textSize="@dimen/_12ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/btn_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_facebook" />

                <ImageView
                    android:id="@+id/btn_gg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_google_plus" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>