<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_12sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_8sdp">

        <TextView
            android:id="@+id/txt_title_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="Chiều cao: "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_title_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:text="@string/c_n_n_ng"
            app:layout_constraintBottom_toBottomOf="@+id/txt_height"
            app:layout_constraintStart_toEndOf="@+id/txt_time"
            app:layout_constraintTop_toTopOf="@+id/txt_height" />

        <TextView
            android:id="@+id/txt_title_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch_s_bmi"
            app:layout_constraintStart_toStartOf="@+id/txt_title_weight"
            app:layout_constraintTop_toTopOf="@+id/txt_time" />

        <TextView
            android:id="@+id/txt_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/txt_title_height"
            app:layout_constraintTop_toTopOf="@+id/txt_title_height"
            tools:text="160 cm" />

        <TextView
            android:id="@+id/txt_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/txt_title_weight"
            app:layout_constraintTop_toTopOf="@+id/txt_title_weight"
            tools:text="45 Kg" />

        <TextView
            android:id="@+id/txt_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/txt_title_weight"
            app:layout_constraintStart_toStartOf="@+id/txt_weight"
            app:layout_constraintTop_toTopOf="@+id/txt_title_bmi"
            tools:text="160 cm" />

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@+id/txt_height"
            app:layout_constraintTop_toTopOf="@+id/txt_title_time"
            tools:text="25-1-2022" />

        <TextView
            android:id="@+id/txt_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@+id/txt_time"
            app:layout_constraintTop_toTopOf="@+id/txt_title_des"
            tools:text="Biến ăn" />

        <TextView
            android:id="@+id/txt_title_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/th_i_gian"
            app:layout_constraintStart_toStartOf="@+id/txt_title_height"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_height" />

        <TextView
            android:id="@+id/txt_title_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/chi_ti_t"
            app:layout_constraintStart_toStartOf="@+id/txt_title_time"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
